Fri Jun 15 12:55:07 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* net/progclient.cc: Don't close stderr in the child before we call
	  execve() - with this change, apitest passes under valgrind with
	  the remote database backend: before it, the child seemed to be
	  exiting without writing anything to the socket, causing the test
	  to fail with a NetworkError (due to an unexpected EOF).

Thu Jun 14 23:47:52 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Replace duplicated code with calls
	  to existing method set_revision_number(new_revision).

Thu Jun 14 18:51:03 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Stop including <sys/utsname.h>
	  which we don't use here.

Thu Jun 14 18:22:24 BST 2007  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Fix typo from copy&paste.

Thu Jun 14 16:46:45 BST 2007  Olly Betts <olly@survex.com>

	* docs/admin_notes.rst: Update for the "lazy table" changes.  Correct
	  the description of xapian-compact --multipass (only the postlist
	  tables are merged in multiple passes), correct description of how
	  to use xapian-check on a single table (no trailing '.' should be
	  specified).  Change the "how to upgrade 0.9.x flint databases" to
	  talk about 1.0.y rather than 1.0.0.

Thu Jun 14 16:25:55 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/: The value and position tables are now only created
	  if there is anything to add to them.  So if you never use document
	  values, there's no value_DB, value.baseA, or value.baseB.  This
	  means the table doesn't need to be opened for searching (saving a
	  file handle) and when flushing changes, we don't need to update
	  baseA/baseB just to keep the revisions in step.  The flint database
	  version has been increased, but the new code will happily open and
	  read/update flint databases from Xapian 1.0.0 and 1.0.1.
	* bin/xapian-check.cc,bin/xapian-compact.cc: Update to handle