@@ -1,3 +1,8 @@
+Fri Jun 15 13:21:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* net/progclient.cc: Better fix - rather than leaving stderr open,
+	  we close it, and then reopen it pointing to /dev/null.
+
 Fri Jun 15 12:55:07 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* net/progclient.cc: Don't close stderr in the child before we call
